welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:15: error: ';' expected but ')' found.
)
^LineByLine:17: error: ')' expected but 'else' found.
			else {
                        ^LineByLine:20: error: illegal start of simple expression
		}
                ^