welcome.lessons.welcome.traversal.line.TraversalByLine.scala.code
def positionFinale()=Boolean = {
	if ((getX() == getMondeLargeur()-1) && (getY() == getMondeHauteur())){
		return true
	}
	return false
}
override def run() {
	var cpt = 0
	for (i <- 1 to getMondeHauteur()){
		for (j <- 1 to getMondeLargeur()){
			ecritMessage(cpt)
			cpt=cpt+1
			if ((getX()=6 % 7) && (!positionFinale()){
				setPos(getX()-6, 0))
			}
			else {
				setPos(getX()+1, getY())
			}
		}
	}
}
